autoblocked sidebar. Css styles to fix issues on mobile breakpoint.  Added logic for tags and tag linking

--- a/templates/post/post.css
+++ b/templates/post/post.css
@@ -4,17 +4,23 @@
 }
 .post main {
   background-color: var(--color-white);
-  margin:0 auto;
-  max-width: 460px;
+  margin:0 1em;
 }
+
 .post main .section > div {
   padding:0;
   margin:0;
 }
 
+.post main .section:not(.hero-container):not(.post-sidebar-wrapper) {
+  padding:0 2em;
+  margin:0 auto;
+}
+
 /* hero restyles */
 .post main .hero picture {
   z-index:1;
+  padding-bottom:2em;
 }
 
 .post main .hero {
@@ -25,8 +31,8 @@
 /* Post Hero  */
 @media (min-width: 600px) {
   .post main {
-    column-gap: 1.5em;
     display: grid;
+    column-gap:1rem;
     grid-template-areas:
     "hero hero"
     "sidebar content"
@@ -35,6 +41,17 @@
     grid-template-columns: 1fr 3fr;
     margin: 2rem auto;
     max-width: var(--section-max-width);
+    padding: unset;
+  }
+
+  .post main .hero picture {
+    z-index:1;
+    padding-bottom:unset;
+  }
+
+  .post main .section:not(.hero-container):not(.post-sidebar-wrapper) {
+    padding:unset;
+    margin:0 auto;
   }
 
   .post main .section > div.hero-wrapper {
@@ -45,6 +62,7 @@
     grid-area: hero;
     padding-bottom:4em;
   }
+
 }
 
 
@@ -79,90 +97,6 @@
 
 .post .post-cards-container {
   grid-area: post-cards;
-}
-
-
-/* SIDE BAR */
-@media (min-width: 600px) {
-  .post .post-sidebar {
-    column-gap: 10px;
-    display: grid;
-    grid-area: sidebar;
-    grid-template-areas:
-    "authorimage social"
-    "authordetails social";
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 165px auto;
-  }
-}
-
-.post .author-image img {
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-  display:block;
-  height:165px;
-  margin:0 auto;
-  width:165px;
-}
-
-/* author details */
-.post .author-image {
-  grid-area: authorimage;
-  height:165px;
-  margin: 0 auto;
-}
-
-.post .author-details {
-  grid-area: authordetails;
-  margin:0 auto;
-  text-align: center;
-}
-
-/* author name */
-.post h3.author-name {
-  font-size: var(--heading-font-size-s);
-  font-weight: 500;
-  line-height: 1.3;
-  margin: 0;
-  padding:10px 0;
-}
-
-/* author title */
-.post h4.author-title {
-  color: var(--color-gray-700);
-  font-weight: 600;
-  font-size: var(--heading-font-size-xxs);
-  margin:0;
-  text-transform: uppercase;
-}
-
-.post .social {
-  grid-area: social;
-}
-
-/* author icon list */
-.post .social span {
-  display: inline-block;
-  margin: 0px 16px;
-}
-
-/* Icon styling */
-.post .social .icon svg {
-  display: block;
-  height: 25px;
-  margin: 5px auto;
-  text-align: center;
-  width: 25px;
-}
-
-.post .social .icon svg {
-  fill: var(--color-gray-700);
-}
-
-.post .social .icon svg:hover {
-  fill: var(--color-red);
 }
 
 /* Post Body */
